[package]
name = "husky"
version = "0.1.0"
authors = ["Luuk van Oijen <lazyluuk.channel@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "*"
pretty_env_logger = "*"

getopts = "0.2.21"

glutin = "0.26.0"
glam = "0.16.0"

husky_lua = { path = "husky_lua" }
husky_graphics = { path = "husky_graphics" }
