[package]
name = "husky_graphics"
version = "0.1.0"
authors = ["Luuk van Oijen <lazyluuk.channel@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "*"

glutin = "0.26.0"
glam = "0.16.0"
gl = "0.14.0"

image = "0.23.14"

rusttype = "0.9.2"
lazy_static = "1.4.0"

mlua = "0.6.1"
