[package]
name = "husky_lua"
version = "0.1.0"
authors = ["Luuk van Oijen <lazyluuk.channel@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "*"
mlua = { version = "0.6.1", features = ["luajit", "vendored"] }
